--- a/yam-yam/src/main/webapp/WEB-INF/HR.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HR.properties
@@ -2,3 +2,9 @@
 #\uC694\uCCADURL=\uBAA8\uB378\uD074\uB798\uC2A4
 #\uBA54\uC778 \uD398\uC774\uC9C0
 /main/main.do=kr.main.action.MainAction
+#\uD68C\uC6D0\uAC00\uC785
+/member/registerUserForm.do=kr.member.action.RegisterUserFormAction
+/member/registerUser.do=kr.member.action.RegisterUserAction
+/member/checkMember.do=kr.member.action.CheckMemberAction
+/member/loginForm.do=kr.member.action.LoginFormAction
+/member/login.do=kr.member.action.LoginAction
