--- a/yam-yam/src/main/webapp/WEB-INF/HR.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HR.properties
@@ -8,3 +8,8 @@
 /member/checkMember.do=kr.member.action.CheckMemberAction
 /member/loginForm.do=kr.member.action.LoginFormAction
 /member/login.do=kr.member.action.LoginAction
+/member/logout.do=kr.member.action.LogoutAction
+#\uD68C\uC6D0 - \uAD00\uB9AC\uC790
+/member/adminList.do=kr.member.action.AdminMemberListAction
+/member/adminUserForm.do=kr.member.action.AdminUserFormAction
+/member/adminUser.do=kr.member.action.AdminUserAction
