리뷰, 리뷰 북마크 완성

--- a/yam-yam/src/main/webapp/WEB-INF/SJ.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/SJ.properties
@@ -1,3 +1,9 @@
-/fplace/writereviews.do = kr.fplace.action.WriteReviewsAction
+/fplace/writeReviews.do = kr.fplace.action.WriteReviewsAction
+/fplace/writeReviewsForm.do=kr.fplace.action.WriteReviewsFormAction
 /fplace/listReviews.do=kr.fplace.action.ListReviewsAction
 /fplace/deleteReviews.do = kr.fplace.action.DeleteReviewsAction
+
+/fplace/getBmreviews.do=kr.fplace.action.GetBmReviewsAction
+/fplace/writeBmreviews.do=kr.fplace.action.WriteBmReviewsAction
+/fplace/getBmstore.do=kr.fplace.action.GetBmStoreAction
+/fplace/writeBmstore.do=kr.fplace.action.WriteBmStoreAction
