--- a/yam-yam/src/main/webapp/WEB-INF/HY.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HY.properties
@@ -6,3 +6,7 @@
 /fplace/deleteFile.do = kr.fplace.action.DeleteFileAction
 /fplace/update.do = kr.fplace.action.UpdateAction
 /fplace/delete.do = kr.fplace.action.DeleteAction
+/fplace/writeFpmenu.do= kr.fplace.action.WriteFpmenuAction
+/fplace/listFpmenu.do = kr.fplace.action.ListFpmenuAction
+/fplace/deleteFpmenu.do = kr.fplace.action.DeleteFpmenuAction
+/fplace/updateFpmenu.do = kr.fplace.action.UpdateFpmenuAction
