--- a/yam-yam/src/main/webapp/WEB-INF/YJ.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/YJ.properties
@@ -1,1 +1,6 @@
 /others/saveStore.do=kr.others.action.SaveStoreAction
+#chat
+/chat/showChat.do=kr.chat.action.ShowChatAction
+/chat/writeChatMsg.do=kr.chat.action.WriteChatMsgAction
+/chat/chatHistory.do=kr.chat.action.ChatHistoryAction
+/chat/chatList.do=kr.chat.action.ChatListAction
