--- a/yam-yam/src/main/webapp/WEB-INF/HR.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HR.properties
@@ -13,3 +13,24 @@
 /member/adminList.do=kr.member.action.AdminMemberListAction
 /member/adminUserForm.do=kr.member.action.AdminUserFormAction
 /member/adminUser.do=kr.member.action.AdminUserAction
+#/\uC815\uBCF4\uC218\uC815
+#/member/myPage.do=kr.member.action.MyPageAction
+#/member/modifyPhoneForm.do=kr.member.action.ModifyPhoneFormAction
+#/member/modifyPhone.do=kr.member.action.ModifyPhoneAction
+#/member/modifyPwForm.do=kr.member.action.ModifyPwFormAction
+#/member/modifyPw.do=kr.member.action.ModifyPwAction
+#/member/deleteUserForm.do=kr.member.action.DeleteUserFormAction
+#/member/deleteUser.do=kr.member.action.DeleteUserAction
+#\uB3C4\uD30C\uBBFC
+/dopamine/dpList.do=kr.dopamine.action.DpListAction
+/dopamine/writeDpForm.do=kr.dopamine.action.WriteDpFormAction
+/dopamine/writeDp.do=kr.dopamine.action.WriteDpAction
+/dopamine/detail.do=kr.dopamine.action.DpDetailAction
+/dopamine/updateDpForm.do=kr.dopamine.action.UpdateDpFormAction
+/dopamine/updateDp.do=kr.dopamine.action.UpdateDpAction
+/dopamine/deleteDp.do=kr.dopamine.action.DeleteDpAction
+/dopamine/fortuneCookie.do=kr.dopamine.action.FortuneCookieAction
+#\uC2DD\uB2F9\uC608\uC57D
+/fplace/reservForm.do=kr.reserv.action.ReservFormAction
+/fplace/reserv.do=kr.reserv.action.ReservAction
+/fplace/reservList.do=kr.reserv.action.ReservListAction
