others 북마크 리뷰 리스트

--- a/yam-yam/src/main/webapp/WEB-INF/YJ.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/YJ.properties
@@ -1,6 +1,6 @@
 #others
 /others/saveStore.do=kr.others.action.SaveStoreAction
-#/others/saveReview.do=kr.others.action.SaveReviewAction
+/others/saveReview.do=kr.others.action.SaveReviewAction
 #chat
 /chat/showChat.do=kr.chat.action.ShowChatAction
 /chat/writeChatMsg.do=kr.chat.action.WriteChatMsgAction
