마이페이지 링크 제외 성공

--- a/yam-yam/src/main/webapp/WEB-INF/JH.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/JH.properties
@@ -75,3 +75,8 @@
 /member/loginForm.do=kr.member.action.LoginFormAction
 /member/login.do=kr.member.action.LoginAction
 /member/myPage.do=kr.member.action.MyPageAction
+# \uC815\uBCF4\uC218\uC815
+/member/modifyPasswordForm.do=kr.member.action.ModifyPasswordFormAction
+/member/modifyPassword.do=kr.member.action.ModifyPasswordAction
+/member/deleteUserForm.do=kr.member.action.DeleteUserFormAction
+/member/deleteUser.do=kr.member.action.DeleteUserAction
