fplace, tmenu 거의 완성본;;

--- a/yam-yam/src/main/webapp/WEB-INF/HY.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HY.properties
@@ -10,3 +10,10 @@
 /fplace/listFpmenu.do = kr.fplace.action.ListFpmenuAction
 /fplace/deleteFpmenu.do = kr.fplace.action.DeleteFpmenuAction
 /fplace/updateFpmenu.do = kr.fplace.action.UpdateFpmenuAction
+/fplace/fplaceAdminList.do = kr.fplace.action.AdminFplaceListAction
+/tmenu/tmenuList.do = kr.tmenu.action.TmenuListAction
+/tmenu/tmenuWriteForm.do = kr.tmenu.action.TmenuWriteFormAction
+/tmenu/tmenuWrite.do = kr.tmenu.action.TmenuWriteAction
+/tmenu/delete.do = kr.tmenu.action.TmenuDeleteAction
+/tmenu/roulette.do = kr.tmenu.action.GetRandomTmenuAction
+/tmenu/draw.do = kr.tmenu.action.GetRandomTmenuAction
