flace, tmenu 기능 완성본, 헤더, notice 수정

--- a/yam-yam/src/main/webapp/WEB-INF/HY.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HY.properties
@@ -10,7 +10,9 @@
 /fplace/listFpmenu.do = kr.fplace.action.ListFpmenuAction
 /fplace/deleteFpmenu.do = kr.fplace.action.DeleteFpmenuAction
 /fplace/updateFpmenu.do = kr.fplace.action.UpdateFpmenuAction
-/fplace/fplaceAdminList.do = kr.fplace.action.AdminFplaceListAction
+/fplace/fplaceAdminList.do = kr.fplace.action.ListFplacAdminAction
+/fplace/fplaceManagerList.do = kr.fplace.action.ListFplaceManagerAction
+/fplace/fplaceUserList.do = kr.fplace.action.ListFplaceUserAction
 /tmenu/tmenuList.do = kr.tmenu.action.TmenuListAction
 /tmenu/tmenuWriteForm.do = kr.tmenu.action.TmenuWriteFormAction
 /tmenu/tmenuWrite.do = kr.tmenu.action.TmenuWriteAction
