관리자 메뉴 - 리뷰 관리 메인 - 식당 추천 리뷰, 북마크 기능/css 수정

--- a/yam-yam/src/main/webapp/WEB-INF/SJ.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/SJ.properties
@@ -2,7 +2,9 @@
 /fplace/writeReviewsForm.do=kr.fplace.action.WriteReviewsFormAction
 /fplace/listReviews.do=kr.fplace.action.ListReviewsAction
 /fplace/deleteReviews.do = kr.fplace.action.DeleteReviewsAction
+/fplace/adminReviewsList.do = kr.fplace.action.AdminReviewsListAction
 
 /fplace/writeBmreviews.do=kr.fplace.action.WriteBmReviewsAction
 /fplace/getBmstore.do=kr.fplace.action.GetBmStoreAction
 /fplace/writeBmstore.do=kr.fplace.action.WriteBmStoreAction
+
