chat chat_read 부분 수정

--- a/yam-yam/src/main/webapp/WEB-INF/YJ.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/YJ.properties
@@ -6,3 +6,4 @@
 /chat/writeChatMsg.do=kr.chat.action.WriteChatMsgAction
 /chat/chatHistory.do=kr.chat.action.ChatHistoryAction
 /chat/chatList.do=kr.chat.action.ChatListAction
+/chat/chatDelete.do=kr.chat.action.DeleteChatAction
