--- a/yam-yam/src/main/webapp/WEB-INF/HR.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HR.properties
@@ -13,14 +13,6 @@
 /member/adminList.do=kr.member.action.AdminMemberListAction
 /member/adminUserForm.do=kr.member.action.AdminUserFormAction
 /member/adminUser.do=kr.member.action.AdminUserAction
-#/\uC815\uBCF4\uC218\uC815
-#/member/myPage.do=kr.member.action.MyPageAction
-#/member/modifyPhoneForm.do=kr.member.action.ModifyPhoneFormAction
-#/member/modifyPhone.do=kr.member.action.ModifyPhoneAction
-#/member/modifyPwForm.do=kr.member.action.ModifyPwFormAction
-#/member/modifyPw.do=kr.member.action.ModifyPwAction
-#/member/deleteUserForm.do=kr.member.action.DeleteUserFormAction
-#/member/deleteUser.do=kr.member.action.DeleteUserAction
 #\uB3C4\uD30C\uBBFC
 /dopamine/dpList.do=kr.dopamine.action.DpListAction
 /dopamine/writeDpForm.do=kr.dopamine.action.WriteDpFormAction
@@ -34,3 +26,4 @@
 /fplace/reservForm.do=kr.reserv.action.ReservFormAction
 /fplace/reserv.do=kr.reserv.action.ReservAction
 /fplace/reservList.do=kr.reserv.action.ReservListAction
+/fplace/adminReservList.do=kr.reserv.action.AdminReservListAction
