12/3 hr3up kiki

--- a/yam-yam/src/main/webapp/WEB-INF/HR.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HR.properties
@@ -27,3 +27,4 @@
 /fplace/reserv.do=kr.reserv.action.ReservAction
 /fplace/reservList.do=kr.reserv.action.ReservListAction
 /fplace/adminReservList.do=kr.reserv.action.AdminReservListAction
+#/fplace/adminReserv.do=kr.reserv.action.AdminReservAction
