--- a/yam-yam/src/main/webapp/WEB-INF/HR.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/HR.properties
@@ -22,9 +22,10 @@
 /dopamine/updateDp.do=kr.dopamine.action.UpdateDpAction
 /dopamine/deleteDp.do=kr.dopamine.action.DeleteDpAction
 /dopamine/fortuneCookie.do=kr.dopamine.action.FortuneCookieAction
-#\uC2DD\uB2F9\uC608\uC57D
+#\uC2DD\uB2F9\uC608\uC57D 
 /fplace/reservForm.do=kr.reserv.action.ReservFormAction
 /fplace/reserv.do=kr.reserv.action.ReservAction
 /fplace/reservList.do=kr.reserv.action.ReservListAction
 /fplace/adminReservList.do=kr.reserv.action.AdminReservListAction
-#/fplace/adminReserv.do=kr.reserv.action.AdminReservAction
+/fplace/adminReserv.do=kr.reserv.action.AdminReservAction
+/fplace/detailReservForm.do=kr.reserv.action.DetailReservFormAction
