--- a/yam-yam/src/main/webapp/WEB-INF/JH.properties
+++ b/yam-yam/src/main/webapp/WEB-INF/JH.properties
@@ -20,6 +20,7 @@
 /cmenu_board/updateForm.do=kr.cmenu_board.action.UpdateFormAction
 /cmenu_board/update.do=kr.cmenu_board.action.UpdateAction
 /cmenu_board/delete.do=kr.cmenu_board.action.DeleteAction
+/cmenu_board/deleteFile.do=kr.cmenu_board.action.DeleteFileAction
 #\uBA54\uB274\uB313\uAE00
 /cmenu_board/writeReply.do=kr.cmenu_board.action.WriteReplyAction
 /cmenu_board/listReply.do=kr.cmenu_board.action.ListReplyAction
@@ -62,6 +63,7 @@
 /czone_board/updateForm.do=kr.czone_board.action.UpdateFormAction
 /czone_board/update.do=kr.czone_board.action.UpdateAction
 /czone_board/delete.do=kr.czone_board.action.DeleteAction
+/czone_board/deleteFile.do=kr.czone_board.action.DeleteFileAction
 #\uBA54\uB274\uB313\uAE00
 /czone_board/writeReply.do=kr.czone_board.action.WriteReplyAction
 /czone_board/listReply.do=kr.czone_board.action.ListReplyAction
